# amino_acid_encoding_deep_learning_applications

./: pyproject.toml
Models/: CNNRNNBluePrint.py
